client/blocks/reader-post-card/style.scss
/* ... */
// Follow button for stream cards
.reader-post-card.card .follow-button {
	flex-shrink: 0;
	align-self: flex-start;
	margin-right: 8px;
	margin-top: 6px;

	.gridicon {
		fill: var( --color-primary );
	}

	.follow-button__label {
		color: var( --color-primary );
	}

	&.is-following {
		.gridicon {
			fill: var( --color-success );
		}

		.follow-button__label {
			color: var( --color-success );
		}
	}

	&.is-discover {
		position: relative;
		top: 0;
		float: none;
		margin-top: 10px;
		margin-bottom: 3px;

		.follow-button__label {
			@include breakpoint-deprecated( '<660px' ) {
				display: inline;
			}
		}
	}
}

// Gallery cards
.reader-post-card__gallery {
	display: flex;
	margin: 0 0 17px;
	padding: 0;
	position: relative;
}

.reader-post-card__gallery-item {
	border: 1px solid var( --color-neutral-0 );
	cursor: pointer;
	flex: 1;
	height: auto;
	list-style-type: none;
	opacity: 1;
	position: relative;
	transition: opacity 1s ease-out;
	width: auto;

	&:last-child {
		margin-right: 0;
	}

	&.hide {
		display: block;
		opacity: 0;
		position: absolute;
	}
}

.reader-post-card .reader-featured-video__video {
	padding-bottom: 17px;
}

.reader-post-card__gallery-image {
	border-radius: 6px;
	box-shadow: 0 0 0 1px rgba(0,0,0,.1);
	height: 300px;
}

.reader-post-card__gallery-circles {
	width: 100%;
	justify-content: center;
	display: flex;
}

.reader-post-card__gallery-circle {
	border-radius: 50%;
	width: 7px;
	height: 7px;
	background: var( --color-neutral-5 );
	border: 0;
	position: relative;
	float: left;
	margin-right: 9px;

	&.is-selected {
		background: var( --color-neutral-100 );
	}
}

.reader-post-card__blocked-description {
	margin-bottom: 0;
	color: var( --color-neutral-70 );
}

.reader-post-card__blocked-undo {
	padding-left: 2px;
	cursor: pointer;
	color: var( --color-primary );

	&:hover {
		color: var( --color-link-dark );
	}
}

// For these borderless cards to look more presentable on Devdocs
.is-section-devdocs .reader-post-card.card {
	padding: 16px;
}

.reader-post-card__featured-images {
	align-items: stretch;
	display: flex;
	flex-wrap: wrap;
	padding: 0;
	margin: 0;
	flex-direction: row;
	gap: 2px;

	&.column {
		flex-direction: column;
	}

	&.four-images {
		border-radius: 6px;
		box-shadow: 0 0 0 1px rgba(0,0,0,.1);

		.reader-post-card__featured-images-item {
			width: calc(50% - 1px);
		}
		.reader-featured-image {
			border-radius: 0;
			max-height: 150px;
			overflow-y: hidden;
		}
		.reader-featured-image img {
			border-radius: 0;
		}
		.reader-post-card__featured-images-item:first-child {
			.reader-featured-image, img {
				border-top-left-radius: 6px;
			}
		}
		.reader-post-card__featured-images-item:nth-child(2) {
			.reader-featured-image, img {
				border-top-right-radius: 6px;
			}
		}
		.reader-post-card__featured-images-item:nth-child(3) {
			.reader-featured-image, img {
				border-bottom-left-radius: 6px;
			}
		}
		.reader-post-card__featured-images-item:last-child {
			.reader-featured-image, img {
				border-bottom-right-radius: 6px;
			}
		}
	}

	&.three-images {
		border-radius: 6px;
		box-shadow: 0 0 0 1px rgba(0,0,0,.1);

		.reader-featured-image {
			border-radius: 0;
			height: 302px;
			max-height: 302px;
		}
		.reader-featured-image img {
			border-radius: 0;
		}
		/* First image */
		.reader-post-card__featured-images-item:first-child {
			border-bottom-left-radius: 6px;
			max-height: 302px;
			overflow: hidden;
			width: calc(50% - 1px);
		}
		.reader-post-card__featured-images-item:first-child img {
			border-bottom-left-radius: 6px;
			border-top-left-radius: 6px;
			height: 100%;
			max-width: none;
			object-fit: cover;
			overflow: hidden;
			width: 100%;
		}
		/* Second and third images */
		.reader-post-card__featured-images-item.column-two {
			width: calc(50% - 1px);
		}
		.reader-post-card__featured-images-item.column-two .reader-post-card__featured-images.column {
			.reader-post-card__featured-images-item {
				height: auto;
				width: auto;
			}
			.reader-post-card__featured-images-item:first-child {
				border-radius: 0;

				img {
					border-radius: 0;
					border-top-right-radius: 6px;
				}
				.reader-featured-image {
					border-radius: 0;
					border-top-right-radius: 6px;
					height: 150px;
					overflow: hidden;
				}
			}
			.reader-post-card__featured-images-item:last-child {
				border-radius: 0;

				img {
					border-radius: 0;
					border-bottom-right-radius: 6px;
				}
				.reader-featured-image {
					border-radius: 0;
					border-bottom-right-radius: 6px;
					max-height: 150px;
					overflow: hidden;
				}
			}
		}
	}

	&.two-images {
		border-radius: 6px;
		box-shadow: 0 0 0 1px rgba(0,0,0,.1);

		.reader-post-card__featured-images-item {
			width: calc(50% - 1px);
		}
		.reader-featured-image {
			border-radius: 0;
			height: 100%;
			max-height: 300px;
			overflow: hidden;
		}
		.reader-featured-image img {
			border-radius: 0;
			max-width: none;
		}
		.reader-post-card__featured-images-item:first-child {
			.reader-featured-image, img {
				border-bottom-left-radius: 6px;
				border-top-left-radius: 6px;
			}
		}
		.reader-post-card__featured-images-item:last-child {
			.reader-featured-image, img {
				border-bottom-right-radius: 6px;
				border-top-right-radius: 6px;
			}
		}
	}
}

.reader-post-card__featured-images-item {
	padding: 0;
	cursor: pointer;
	list-style-type: none;
}

.reader-post-card__featured-images-img {
	vertical-align: middle;
}

