Fix 4 image styles on mobile web

--- a/client/blocks/reader-post-card/style.scss
+++ b/client/blocks/reader-post-card/style.scss
@@ -751,17 +751,22 @@
 	&.four-images {
 		border-radius: 6px;
 		box-shadow: 0 0 0 1px rgba(0,0,0,.1);
+		height: 302px;
+		max-height: 302px;
 
 		.reader-post-card__featured-images-item {
 			width: calc(50% - 1px);
 		}
 		.reader-featured-image {
 			border-radius: 0;
+			height: 100%;
 			max-height: 150px;
-			overflow-y: hidden;
+			overflow: hidden;
 		}
 		.reader-featured-image img {
 			border-radius: 0;
+			height: 100%;
+			max-width: unset;
 		}
 		.reader-post-card__featured-images-item:first-child {
 			.reader-featured-image, img {
